--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,22 @@
 Package: bqror
 Type: Package
 Title: Bayesian Quantile Regression for Ordinal Models
-Version: 1.3.1
+Version: 1.4.0
+URL: https://github.com/prajual/bqror
 Imports: MASS, pracma, GIGrvg, truncnorm, NPflow, invgamma, graphics, stats, progress
 Authors@R: c(person("Mohammad Arshad Rahman", "Developer", role = "aut",
                      email = c("arshadrahman25@gmail.com","marshad@iitk.ac.in")),
               person("Prajual Maheshwari", role = "cre", email = "prajual1391@gmail.com"))
 Maintainer: Prajual Maheshwari <prajual1391@gmail.com>
-Description: Provides functions for estimating Bayesian quantile regression 
-            for ordinal models, calculating covariate effects, and computing measures for 
-            model comparision. Specifically, the package offers two estimation functions - 
-            one for an ordinal model with more than three outcomes. For each ordinal model, 
-            the package provides functions to calculate the covariate effect using the MCMC 
-            outputs. The package also computes marginal likelihood (recommended) and the 
-            Deviance Information Criterion (DIC) for comparing alternative quantile regression 
-            models. Besides, the package also contains functions for making trace plots of MCMC draws
-            and other functions that aids the estimation or inference of quantile ordinal models.
+Description: Package provides functions for estimating Bayesian quantile regression with ordinal outcomes, 
+        computing the covariate effects, model comparison measures, and inefficiency factor. The generic 
+        ordinal model with 3 or more outcomes (labeled OR1 model) is estimated by a combination of Gibbs 
+        sampling and Metropolis-Hastings algorithm. Whereas an ordinal model with exactly 3 outcomes 
+        (labeled OR2 model) is estimated using Gibbs sampling only. For each model framework, there is a 
+        specific function for estimation. The summary output produces estimates for regression quantiles 
+        and two measures of model comparison — log of marginal likelihood and Deviance Information Criterion 
+        (DIC). The package also has specific functions for computing the covariate effects and other functions 
+        that aids either the estimation or inference in quantile ordinal models.
         Rahman, M. A. (2016).“Bayesian Quantile Regression for Ordinal Models.” Bayesian 
         Analysis, II(I): 1-24 <doi: 10.1214/15-BA939>.
         Yu, K., and Moyeed, R. A. (2001). “Bayesian Quantile Regression.” Statistics and 
@@ -32,3 +33,5 @@ LazyData: true
 Repository: CRAN
 RoxygenNote: 7.1.2
 Depends: R (>= 3.5.0)
+Suggests: testthat (>= 3.0.0)
+Config/testthat/edition: 3
